; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifaddr_findbestforaddr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifaddr_findbestforaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ifaddr_findbestforaddr(%struct.sockaddr* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.sockaddr*, align 8
  %5 = alloca i32*, align 8
  store %struct.sockaddr* %0, %struct.sockaddr** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.sockaddr*, %struct.sockaddr** %4, align 8
  %7 = icmp eq %struct.sockaddr* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %2
  store i32* null, i32** %3, align 8
  br label %16

12:                                               ; preds = %8
  %13 = load %struct.sockaddr*, %struct.sockaddr** %4, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32* @ifaof_ifpforaddr_select(%struct.sockaddr* %13, i32* %14)
  store i32* %15, i32** %3, align 8
  br label %16

16:                                               ; preds = %12, %11
  %17 = load i32*, i32** %3, align 8
  ret i32* %17
}

declare dso_local i32* @ifaof_ifpforaddr_select(%struct.sockaddr*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
